@@ -84,4 +84,28 @@ if ($test == -1) {
 	$result .= msj_present("La table existe déjà");
 }
 
+$result .= "<strong>Ajout d'une table 'calendrier_vacances' :</strong><br />";
+$test = sql_query1("SHOW TABLES LIKE 'calendrier_vacances'");
+if ($test == -1) {
+	$result_inter = traite_requete("CREATE TABLE IF NOT EXISTS calendrier_vacances (
+		id int(11) NOT NULL auto_increment,
+		nom_calendrier varchar(100) NOT NULL default '',
+		debut_calendrier_ts varchar(11) NOT NULL,
+		fin_calendrier_ts varchar(11) NOT NULL,
+		jourdebut_calendrier date NOT NULL default '0000-00-00',
+		heuredebut_calendrier time NOT NULL default '00:00:00',
+		jourfin_calendrier date NOT NULL default '0000-00-00',
+		heurefin_calendrier time NOT NULL default '00:00:00',
+		PRIMARY KEY (id)) 
+		ENGINE=MyISAM CHARACTER SET utf8 COLLATE utf8_general_ci;");
+	if ($result_inter == '') {
+		$result .= msj_ok("SUCCES !");
+	}
+	else {
+		$result .= msj_erreur("ECHEC !");
+	}
+} else {
+	$result .= msj_present("La table existe déjà");
+}
+
 ?>
